content/en/docs/v1/operations/configuration/bundles.md
---
title: "Cozystack Bundles: Overview and Comparison"
linkTitle: "Bundles"
description: "Cozystack bundles reference: composition, configuration, and troubleshooting."
weight: 20
aliases:
  - /docs/v1/guides/bundles
  - /docs/v1/operations/bundles/
  - /docs/v1/operations/bundles/isp-full
  - /docs/v1/operations/bundles/isp-hosted
  - /docs/v1/operations/bundles/paas-full
  - /docs/v1/operations/bundles/paas-hosted
  - /docs/v1/operations/bundles/distro-full
  - /docs/v1/operations/bundles/distro-hosted
  - /docs/v1/install/cozystack/bundles
---

## Introduction

**Bundles** are pre-defined combinations of Cozystack components.
Each bundle is tested, versioned, and guaranteed to work as a unit.
They simplify installation, reduce the risk of misconfiguration, and make it easier to choose the right set of features for your deployment.

This guide is for infrastructure engineers, DevOps teams, and platform architects planning to deploy Cozystack in different environments.
It explains how Cozystack bundles help tailor the installation to specific needs—whether you're building a fully featured platform-as-a-service
or just need a minimal Kubernetes cluster.


## Bundles Overview

| Component                     | [isp-full]             | [iaas-full]<sup>*</sup> | [isp-hosted]   | [distro-full]         | [distro-hosted]       |
|:------------------------------|:-----------------------|:------------------------|:---------------|:----------------------|:----------------------|
| [Managed Kubernetes][k8s]     | ✔                      | ✔                       |                |                       |                       |
| [Managed Applications][apps]  | ✔                      |                         | ✔              |                       |                       |
| [Virtual Machines][vm]        | ✔                      | ✔                       |                |                       |                       |
| Cozystack Dashboard (UI)      | ✔                      | ✔                       | ✔              |                       |                       |
| [Cozystack API][api]          | ✔                      | ✔                       | ✔              |                       |                       |
| [Kubernetes Operators]        | ✔                      |                         | ✔              | ✔ (optional)          | ✔ (optional)          |
| [Monitoring subsystem]        | ✔                      | ✔                       | ✔              | ✔ (optional)          | ✔ (optional)          |
| Storage subsystem             | [LINSTOR]              | [LINSTOR]               |                | [LINSTOR]             |                       |
| Networking subsystem          | [Kube-OVN] + [Cilium]  | [Kube-OVN] + [Cilium]   |                | [Cilium]              |                       |
| Virtualization subsystem      | [KubeVirt]             | [KubeVirt]              |                | [KubeVirt] (optional) | [KubeVirt] (optional) |
| OS and [Kubernetes] subsystem | [Talos Linux]          | [Talos Linux]           |                | [Talos Linux]         |                       |

<sup>*</sup> Bundle `iaas-full` is currently on the roadmap, see [cozystack/cozystack#730][iaas-full-gh].

[apps]: {{% ref "/docs/v1/applications" %}}
[vm]: {{% ref "/docs/v1/virtualization" %}}
[k8s]: {{% ref "/docs/v1/kubernetes" %}}
[api]: {{% ref "/docs/v1/cozystack-api" %}}
[monitoring subsystem]: {{% ref "/docs/v1/guides/platform-stack#victoria-metrics" %}}
[linstor]: {{% ref "/docs/v1/guides/platform-stack#drbd" %}}
[kube-ovn]: {{% ref "/docs/v1/guides/platform-stack#kube-ovn" %}}
[cilium]: {{% ref "/docs/v1/guides/platform-stack#cilium" %}}
[kubevirt]: {{% ref "/docs/v1/guides/platform-stack#kubevirt" %}}
[talos linux]: {{% ref "/docs/v1/guides/platform-stack#talos-linux" %}}
[kubernetes]: {{% ref "/docs/v1/guides/platform-stack#kubernetes" %}}
[kubernetes operators]: https://github.com/cozystack/cozystack/blob/main/packages/core/platform/templates/bundles/paas.yaml

[isp-full-gh]: https://github.com/cozystack/cozystack/blob/main/packages/core/platform/bundles/isp-full.yaml
[iaas-full-gh]: https://github.com/cozystack/cozystack/issues/730
[isp-hosted-gh]: https://github.com/cozystack/cozystack/blob/main/packages/core/platform/bundles/isp-hosted.yaml
[distro-full-gh]: https://github.com/cozystack/cozystack/blob/main/packages/core/platform/bundles/distro-full.yaml
[distro-hosted-gh]: https://github.com/cozystack/cozystack/blob/main/packages/core/platform/bundles/distro-hosted.yaml

[isp-full]: {{% ref "/docs/v1/operations/configuration/bundles#isp-full" %}}
[iaas-full]: https://github.com/cozystack/cozystack/issues/730
[isp-hosted]: {{% ref "/docs/v1/operations/configuration/bundles#isp-hosted" %}}
[distro-full]: {{% ref "/docs/v1/operations/configuration/bundles#distro-full" %}}
[distro-hosted]: {{% ref "/docs/v1/operations/configuration/bundles#distro-hosted" %}}


## Choosing the Right Bundle

Bundles combine components from different layers to match particular needs.
Some are designed for full platform scenarios, others for cloud-hosted workloads or Kubernetes distributions.

### `isp-full`

`isp-full` is a full-featured PaaS and IaaS bundle, designed for installation on Talos Linux.
It includes all four layers and provides the full set of Cozystack components, enabling a comprehensive PaaS experience.
Some higher-layer components are optional and can be excluded during installation.

`isp-full` is intended for installation on bare-metal servers or VMs.

Bundle source: [isp-full.yaml][isp-full-gh].

Example configuration:

```yaml
apiVersion: cozystack.io/v1alpha1
kind: Package
metadata:
  name: cozystack.cozystack-platform
spec:
  variant: isp-full
  components:
    platform:
      values:
        networking:
          podCIDR: "10.244.0.0/16"
          podGateway: "10.244.0.1"
          serviceCIDR: "10.96.0.0/16"
          joinCIDR: "100.64.0.0/16"
        publishing:
          host: "example.org"
          apiServerEndpoint: "https://192.168.100.10:6443"
          exposedServices:
            - api
            - dashboard
            - cdi-uploadproxy
            - vm-exportproxy
```

### `isp-hosted`

Cozystack can be installed as platform-as-a-service (PaaS) on top of an existing managed Kubernetes cluster,
typically provisioned from a cloud provider.
Bundle `isp-hosted` is made for this use case.
It can be used with [kind](https://kind.sigs.k8s.io/) and any cloud-based Kubernetes clusters.

Bundle `isp-hosted` includes layers 3 and 4, providing Cozystack API and UI, managed applications, and tenant Kubernetes clusters.
It does not include CNI plugins, virtualization, or storage.

The Kubernetes cluster used to deploy Cozystack must conform to the following requirements:

-   Listening address of some Kubernetes components must be changed from `localhost` to a routable address.
-   Kubernetes API server must be reachable on `localhost`.

Bundle source: [isp-hosted.yaml][isp-hosted-gh].

Example configuration:

```yaml
apiVersion: cozystack.io/v1alpha1
kind: Package
metadata:
  name: cozystack.cozystack-platform
spec:
  variant: isp-hosted
  components:
    platform:
      values:
        publishing:
          host: "example.org"
          apiServerEndpoint: "https://192.168.100.10:6443"
          exposedServices:
            - api
            - dashboard
```

### `distro-full`

Cozystack can be used as a pure Kubernetes distribution for installing on Talos Linux over bare metal.
Bundle `distro-full` includes everything needed to make a ready-to-work Kubernetes cluster:

- Talos as the operating system,
- Kubernetes distribution,
- Ready-to-use subsystems: networking, virtualization, and storage,
- Optional components: Monitoring and a set of Kubernetes operators.

Bundle source: [distro-full.yaml][distro-full-gh].

Example configuration:

```yaml
apiVersion: cozystack.io/v1alpha1
kind: Package
metadata:
  name: cozystack.cozystack-platform
spec:
  variant: distro-full
  components:
    platform:
      values:
        networking:
          podCIDR: "10.244.0.0/16"
          serviceCIDR: "10.96.0.0/16"
        publishing:
          host: "example.org"
          apiServerEndpoint: "https://192.168.100.10:6443"
```

### `distro-hosted`

This minimal Cozystack bundle adds extra functionality on top of a hosted Kubernetes cluster.
It includes three optional components:

- Virtualization subsystem (as KubeVirt).
- Monitoring subsystem.
- Kubernetes operators.

Bundle `distro-hosted` can be used with [kind](https://kind.sigs.k8s.io/) and any cloud-based Kubernetes clusters.
It does not include CNI plugins, virtualization, storage, or multitenancy.

The Kubernetes cluster used to deploy Cozystack must conform to the following requirements:

* Kubernetes cluster DNS domain must be set to `cozy.local`.
* Listening address of some Kubernetes components must be changed from `localhost` to a routable address.
* Kubernetes API server must be reachable on `localhost`.

Bundle source: [distro-hosted.yaml][distro-hosted-gh].

### `iaas-full`

This planned bundle offers a complete infrastructure-as-a-service setup.
It provides all Cozystack components except for Kubernetes operators
and preset managed applications.

Bundle `iaas-full` is yet to be implemented in Cozystack.
See [cozystack/cozystack#730][iaas-full-gh].

## Learn More

For a full list of configuration options for each bundle, refer to the
[configuration reference]({{% ref "/docs/v1/operations/configuration" %}}).

To see the full list of components, how to enable and disable them, refer to the
[Components reference]({{% ref "/docs/v1/operations/configuration/components" %}}).

To deploy a selected bundle, follow the [Cozystack installation guide]({{% ref "/docs/v1/install/cozystack" %}}) 
or [provider-specific guides]({{% ref "/docs/v1/install/providers" %}}).
However, if this your first time installing Cozystack, it's best to use the complete bundle `isp-full` and
go through the [Cozystack tutorial]({{% ref "/docs/v1/getting-started" %}}).
